--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -290,6 +290,10 @@ img {
 
 /*========== PROFILE ==========*/
 
+.profile__description {
+  text-align: center;
+}
+
 /*========== EDUCATION AND EXPERIENCE ==========*/
 
 /*========== SKILLS AND LANGUAGES ==========*/
