--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -296,13 +296,16 @@ img {
 
 /*========== EDUCATION AND EXPERIENCE ==========*/
 
-.education__content {
+.education__content,
+.experience__content {
   display: flex;
 }
-.education__time {
+.education__time,
+.experience__time {
   padding-right: 1rem;
 }
-.education__rounder {
+.education__rounder,
+.experience__rounder {
   position: relative;
   display: block;
   width: 16px;
@@ -312,7 +315,8 @@ img {
   margin-top: 0.25rem;
 }
 
-.education__line {
+.education__line,
+.experience__line {
   display: block;
   width: 2px;
   height: 110%;
@@ -320,15 +324,18 @@ img {
   transform: translate(7px, 0);
 }
 
-.education__data {
+.education__data,
+.experience__data {
   gap: 0.5rem;
 }
 
-.education__title {
+.education__title,
+.experience__title {
   font-size: var(--h3-font-size);
 }
 
-.education__studies {
+.education__studies,
+.experience__company {
   font-size: var(--small-font-size);
   color: var(--title-color);
 }
