--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -372,6 +372,23 @@ img {
 
 /*========== REFERENCES ==========*/
 
+.references__content {
+  gap: 0.25rem;
+}
+
+.references__subtitle {
+  color: var(--text-color-light);
+}
+
+.references__subtitle,
+.references__contact {
+  font-size: var(--small-font-size);
+}
+
+.references__title {
+  font-size: var(--h3-font-size);
+}
+
 /*========== INTERESTS ==========*/
 
 /* Scroll top */
