--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -102,7 +102,7 @@ body.scale-cv {
   display: none;
 }
 .scale-cv .bd-container {
-  max-width: 670px;
+  max-width: 700px;
 }
 .scale-cv .section {
   padding: 1.5rem 0 0.8rem;
@@ -131,7 +131,13 @@ body.scale-cv {
 .scale-cv .social__container {
   gap: 0.75rem;
 }
-
+.scale-cv .languages__content {
+  padding-top: var(--mb-1);
+  padding-bottom: 7%;
+}
+.scale-cv .references__content {
+  padding-bottom: var(--mb-1);
+}
 .scale-cv .home__icon,
 .scale-cv .social__icon,
 .scale-cv .interests__icon {
@@ -156,18 +162,27 @@ body.scale-cv {
   margin-top: 0.27rem;
 }
 
-.scale-cv .education__line,
+.scale-cv .education__line {
+  width: 1px;
+  height: 120%;
+  transform: translate(5px, 0);
+}
 .scale-cv .experience__line {
   width: 1px;
-  height: 110%;
+  height: 111%;
   transform: translate(5px, 0);
 }
 
-.scale-cv .education__data,
+.scale-cv .education__data {
+  gap: 0.1rem;
+}
 .scale-cv .experience__data {
-  gap: 0.25rem;
+  gap: 0.15rem;
 }
 
+.scale-cv .profile__description {
+  padding-bottom: auto;
+}
 .scale-cv .skills__name {
   margin-bottom: var(--mb-1);
 }
@@ -448,7 +463,7 @@ img {
 
 .education__data,
 .experience__data {
-  gap: 0.5rem;
+  gap: 0.3rem;
 }
 
 .education__title,
